--- a/src/scss/regions/_header.scss
+++ b/src/scss/regions/_header.scss
@@ -39,7 +39,9 @@
     }
   }
   .main-header {
-    margin-bottom: 2em;
+
+		margin-top: 3rem;
+		margin-bottom: 2rem;
 
     .names{
       margin-top: 1.5em;
